Renamed the plugin ID and added very basic help for the dialog box (press F1).

--- a/codehint-plugin/plugin.xml
+++ b/codehint-plugin/plugin.xml
@@ -84,5 +84,12 @@
             name="Demonstrate state property">
       </command>
    </extension>
+   <extension
+         point="org.eclipse.help.contexts">
+      <contexts
+            file="contexts.xml"
+            plugin="codehint">
+      </contexts>
+   </extension>
 
 </plugin>
