Added a quick fix that wraps primed variables in CodeHint.post. Unfortunately, it doesn't seem to pop-up on hover....

--- a/codehint-plugin/plugin.xml
+++ b/codehint-plugin/plugin.xml
@@ -91,5 +91,12 @@
             plugin="codehint">
       </contexts>
    </extension>
+   <extension
+         point="org.eclipse.ui.ide.markerResolution">
+      <markerResolutionGenerator
+            class="codehint.PrimeFixer"
+            markerType="org.eclipse.jdt.core.problem">
+      </markerResolutionGenerator>
+   </extension>
 
 </plugin>
