Add a toolbar/keystroke that will automatically add a breakpoint at the current line and start the debugger. Automatically removed added breakpoints when an execution terminates.

--- a/codehint-plugin/build.properties
+++ b/codehint-plugin/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/codehint-lib.jar
+               lib/codehint-lib.jar,\
+               icons/
