--- a/codehint-plugin/build.properties
+++ b/codehint-plugin/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/codehint-lib.jar,\
-               icons/
+               icons/,\
+               LICENSE
