Fixed a bug in the weights and compressed the file in the repository to save space.

--- a/codehint-plugin/build.properties
+++ b/codehint-plugin/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                lib/codehint-lib.jar,\
                icons/,\
                LICENSE,\
-               data/weights
+               data/weights.gz
