Slightly improved side effect performance. I added the results of an offline analysis that detected fields that never changed. I then use this to reduce the number of breakpoints I install, which previous profiling suggested would improve performance. Unfortunately, which this decreases the number of breakpoints by about a third, it only has a small effect on runtime, if any.

--- a/codehint-plugin/build.properties
+++ b/codehint-plugin/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                lib/codehint-lib.jar,\
                icons/,\
                LICENSE,\
-               data/weights.gz
+               data/weights.gz,\
+               data/notmod.gz
